--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-  <string name="app_name">veryfi-lens-react-native-expo-demo</string>
+    <string name="app_name">Lens Demo - React Native</string>
 </resources>
